--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello me!</title>
 </head>
 <body>
-<h1>Hello me again</h1>
+<h1>Hello me again. I might have to find another version of node</h1>
 </body>
 </html>
